crates/plotnik-tests/tests/03-analyze/definitions/error_captured_match_only_ref.txt
MatchOnly = {
  (a)
  (b)
}

Q = (call (MatchOnly) @v)
------------------ DIAGNOSTICS -------------------
error: `@v` cannot capture `(MatchOnly)` because `MatchOnly` produces no result value
 --> query.ptk:6:11
  |
1 | / MatchOnly = {
2 | |   (a)
3 | |   (b)
4 | | }
  | |_- `MatchOnly` is defined here
5 |
6 |   Q = (call (MatchOnly) @v)
  |             ^^^^^^^^^^^
  |
help: make `MatchOnly` produce a result by changing `(a)` to `(a) @v_value` in definition `MatchOnly`
help: or remove `@v` and capture a node pattern directly
-------------------- SYMBOLS ---------------------
MatchOnly
Q
  MatchOnly
